# backfield-client-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PROPOSALS.md  README.md  pyproject.toml
backfield/: __init__.py  agent.py  atlas.py  cli.py  client.py  config.py  craft.py  errors.py  garden.py  identity.py  lint.py  models.py  river.py  transport.py  version.py
docs/: CRAFT.md
examples/: byoa_agent.py  quickstart.py
tests/: test_lint.py  test_sdk.py
